force-app/main/default/objects/Amendment_Team_Member__c/Amendment_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Amendment Team Member</label>
    <nameField>
        <displayFormat>ATM# {0000}</displayFormat>
        <label>Amendment Team  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>