force-app/main/default/objects/Amendment_Team_Member__c/fields/Amendment_Team__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Team__c</fullName>
    <inlineHelpText>Member of Amendment Team</inlineHelpText>
    <label>Amendment Team</label>
    <referenceTo>Amendment_Team__c</referenceTo>
    <relationshipLabel>Amendment Team Members</relationshipLabel>
    <relationshipName>Amendment_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>