force-app/main/default/objects/Amendment_Team_Member__c/fields/Duplicate_Match__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Match__c</fullName>
    <description>Its only to match duplicate record. Do not put any value in to this place.</description>
    <inlineHelpText>Its only to match duplicate record. Do not put any value in to this place.</inlineHelpText>
    <label>Duplicate Match</label>
    <length>1</length>
    <type>Text</type>
</CustomField>