force-app/main/default/objects/Amendment_Team_Member__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Series</label>
    <referenceTo>Series__c</referenceTo>
    <relationshipLabel>Amendment Team Members</relationshipLabel>
    <relationshipName>Amendment_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>