force-app/main/default/objects/Amendment_Team_Member__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User who needs Amend permission.</inlineHelpText>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Amendment_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>